syntax = "proto3";

import "proto/conabit/englearn/collection/collection_transport.proto";

package conabit.englearn.collection;

option go_package = "github.com/Conabit-Corp/EngLearn/proto/conabit/englearn/collection";

service WordCollectionService{
    rpc CreateWordCollection(CreateWordCollectionRequest) returns (CreateWordCollectionResponse) {}

    rpc GetWordCollection(GetWordCollectionRequest) returns (GetWordCollectionResponse) {}

    rpc CreateGroupWordCollection(CreateGroupCollectionRequest) returns (CreateWordCollectionResponse) {}

    rpc GetUserWordCollections(GetUserCollectionsRequest) returns (GetUserCollectionsResponse) {}

    rpc GetGroupWordCollections(GetGroupCollectionsRequest) returns (GetGroupCollectionsResponse) {}

    rpc DeleteWordCollection(DeleteWordCollectionRequest) returns (DeleteWordCollectionResponse) {}

    rpc AddWordToCollection(AddWordToCollectionRequest) returns (AddWordToCollectionResponse) {}

    rpc RemoveWordFromCollection(RemoveWordFromCollectionRequest) returns (RemoveWordFromCollectionResponse) {}

    rpc EditWordFromCollection(EditWordFromCollectionRequest) returns (EditWordFromCollectionResponse) {}
}
